--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -411,7 +411,7 @@ img {
 
 .landing {
   position: relative;
-  background: url("../images/hero.jpg") no-repeat center center/cover;
+  background: url("../images/home.jpg") no-repeat center center/cover;
   height: 100vh;
 }
 
